# SpaceShipSim

./: CHANGELOG  CHANGELOG.md  CMakeLists.txt  README  README.md  TODO
src/: display.c  display.h  event_manager.c  event_manager.h  globals.h  main.c  planet.c  planet.h  ship.c  ship.h  starfield.c  starfield.h
